feat: add children to task and use them when deciding the start time of current task

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,5 @@ config/testing/ppo_masked/*
 !config/testing/dqn/schema.json
 !config/testing/ppo/schema.json
 !config/testing/ppo_masked/schema.json
+*.pyc
+.idea/vcs.xml
