--- a/config/data_generation/asp/config_job3_task4_tools0.yaml
+++ b/config/data_generation/asp/config_job3_task4_tools0.yaml
@@ -2,16 +2,18 @@
 ###                         Data generation                                ###
 ##############################################################################
 
-# (R) [str] Type of your scheduling problem - this template is for the asp
+# (R) [str] Type of your scheduling problem - this template is for the fjssp
 sp_type: asp
 # (O)   [string]  Filename under the generated data will be saved (subdirectory is chosen by sp_type)
 instances_file: config_job3_task4_tools0.pkl
 # (O)   [int]     Seed for all pseudo random generators (random, numpy, torch)
 seed: 0
 # (R) [int] Number of jobs to be scheduled
-num_jobs: 1
+num_jobs: 3
 # (R) [int] Number of tasks per job to be scheduled (has to be equal to num_machines for jssp)
 num_tasks: 4
+# (R) [int] Percentage of predecessors of a task
+predecessor_percentage: 30
 # (R) [int] Number of available machines (has to be equal to num_tasks for jssp)
 num_machines: 4
 # (R) [int] Number of available tools to be scheduled
