--- a/config/testing/ppo/config_job3_task4_tools0.yaml
+++ b/config/testing/ppo/config_job3_task4_tools0.yaml
@@ -1,11 +1,12 @@
 ##############################################################################
 ###                               Testing                                  ###
 ##############################################################################
-
+# (R) [str] Type of your scheduling problem - this template is for the fjssp
+sp_type: fjssp
 # (R)   [string]  RL algorithm you want to use - This template is for dqn
 algorithm: ppo
 # (R)   [string]  Path to the file with generated data that to be used for training
-instances_file: jssp/config_job3_task4_tools0.pkl
+instances_file: fjssp/config_job3_task4_tools0.pkl
 # (R)   [string]  Test Environment: Should be the same the agent was trained on
                   # to stay consistent with action and observation spaces
 environment: env_tetris_scheduling_indirect_action
