--- a/.gitignore
+++ b/.gitignore
@@ -52,44 +52,44 @@ data/wandb/*
 
 
 # Ignore all config files but specific examples
-config/*
-!config/data_generation
-!config/rllib
-!config/sweep
-!config/training
-!config/testing
-config/data_generation/*
-config/rllib/*
-config/sweep/*
-config/training/*
-config/testing/*
-!config/data_generation/jssp
-!config/data_generation/fjssp
-!config/rllib/rllib_example.yaml
-!config/sweep/config_sweep_ppo.yaml
-!config/training/dqn
-!config/training/ppo
-!config/training/ppo_masked
-!config/testing/ppo_masked
-config/training/ppo_masked/*
-config/testing/dqn/*
-config/testing/ppo/*
-config/testing/ppo_masked/*
-!config/data_generation/jssp/schema.json
-!config/data_generation/jssp/config_job3_task4_tools0.yaml
-!config/data_generation/fjssp/schema.json
-!config/data_generation/fjssp/config_job3_task4_tools0.yaml
-!config/training/dqn/config_job3_task4_tools0.yaml
-!config/training/ppo/config_job3_task4_tools0.yaml
-!config/training/ppo_masked/config_job3_task4_tools0.yaml
-!config/training/dqn/schema.json
-!config/training/ppo/schema.json
-!config/training/ppo_masked/schema.json
-!config/testing/dqn/config_job3_task4_tools0.yaml
-!config/testing/ppo/config_job3_task4_tools0.yaml
-!config/testing/ppo_masked/config_job3_task4_tools0.yaml
-!config/testing/dqn/schema.json
-!config/testing/ppo/schema.json
-!config/testing/ppo_masked/schema.json
+#config/*
+#!config/data_generation
+#!config/rllib
+#!config/sweep
+#!config/training
+#!config/testing
+#config/data_generation/*
+#config/rllib/*
+#config/sweep/*
+#config/training/*
+#config/testing/*
+#!config/data_generation/jssp
+#!config/data_generation/fjssp
+#!config/rllib/rllib_example.yaml
+#!config/sweep/config_sweep_ppo.yaml
+#!config/training/dqn
+#!config/training/ppo
+#!config/training/ppo_masked
+#!config/testing/ppo_masked
+#config/training/ppo_masked/*
+#config/testing/dqn/*
+#config/testing/ppo/*
+#config/testing/ppo_masked/*
+#!config/data_generation/jssp/schema.json
+#!config/data_generation/jssp/config_job3_task4_tools0.yaml
+#!config/data_generation/fjssp/schema.json
+#!config/data_generation/fjssp/config_job3_task4_tools0.yaml
+#!config/training/dqn/config_job3_task4_tools0.yaml
+#!config/training/ppo/config_job3_task4_tools0.yaml
+#!config/training/ppo_masked/config_job3_task4_tools0.yaml
+#!config/training/dqn/schema.json
+#!config/training/ppo/schema.json
+#!config/training/ppo_masked/schema.json
+#!config/testing/dqn/config_job3_task4_tools0.yaml
+#!config/testing/ppo/config_job3_task4_tools0.yaml
+#!config/testing/ppo_masked/config_job3_task4_tools0.yaml
+#!config/testing/dqn/schema.json
+#!config/testing/ppo/schema.json
+#!config/testing/ppo_masked/schema.json
 *.pyc
 .idea/vcs.xml
