add new heuristics as discussed

--- a/config/testing/ppo/config_ASP_WIDE_TESTING.yaml
+++ b/config/testing/ppo/config_ASP_WIDE_TESTING.yaml
@@ -33,4 +33,4 @@ wandb_mode: 0
 # (O)   [string]  Set a wandb project where you want to upload all wandb logs
 wandb_project: project-1
 # (R)   List[str] List of all heuristics and algorithms against which to benchmark
-test_heuristics:  ['LETSA', 'EDD_ASP', 'MPO_ASP', 'LPO_ASP', 'SPT_ASP', 'rand_asp'] # ['EDD_ASP', 'MPO_ASP', 'SPT_ASP']
+test_heuristics: ['LPO_ROOT_ASP', 'MPO_ROOT_ASP'] # ['LETSA', 'EDD_ASP', 'MPO_ASP', 'LPO_ASP', 'SPT_ASP', 'rand_asp'] # ['EDD_ASP', 'MPO_ASP', 'SPT_ASP']
